app/styles/index.css
table
{
  border-collapse: collapse;
  border-spacing: 0;
}

body
{
  line-height: 1;
  cursor: default;
  cursor: -webkit-default;
  cursor: -moz-default;
   background-image:
  linear-gradient(#000033, #29293D);
  color: white;
  height: 41em;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

p
{
  font-size: .8em;
  margin: .5em;
}

td
{
  width:  52px;
  height: 52px;
}

.blank
{
  color: rgb(224, 224, 224);
}

.letter
{
  background-color: rgb(232, 148, 66);
  border: 1px solid rgb(151, 84, 19);
  /*color: black;*/
  font-family: arial;
  font-size: 18pt;
  width: 40px;
  height: 40px;
  border-radius: 5px;
  text-align: center;
  float: left;
  user-select: none;
  padding: 0;
  box-shadow: 2px 2px 0px rgb(151, 84, 19);
  z-index: 20;
}

.ui-draggable
{
  cursor: grab;
  cursor: -webkit-grab;
  cursor: -moz-grab;
}

.ui-draggable-dragging
{
  cursor: grabbing;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  box-shadow: 3px 3px 5px black;
  position: absolute;
}

.letter-character
{
  position: relative;
  top: 7px;
  z-index: 20;
  color: black;
  text-shadow: -1px -1px 0px rgb(151, 84, 19);
}

.letter-score
{
  position: relative;
  font-size: 10pt;
  left: 10px;
  color: rgb(151, 84, 19);
  z-index: 20;
}

#overlay
{
  display: none;
  position: absolute;
  left: 0px;
  top: 0px;
  width:100%;
  height:100%;
  background-color: rgba(0,0,0,.5);
  z-index: 1000;
}

.popup
{
  width: 25em;
  left: 33.33%;
  margin: 12em auto;
  background-color: #fff;
  border: 1px solid #000;
  text-align:center;
  padding: 15px;
  color: black;
  font-size: 1.3em;
}

.letter-button
{
  width: 25px;
}
.game-button
{
  display: none;
}
#fb-share-button
{
}
select
{
  line-height: 1em;
  font-size: .7em;
  width: 13em;
}
#login-button
{
  font-size: .7em;
}

